# erpnext-indonesia-localization

./: .gitignore  .gitlab-ci.yml  MANIFEST.in  README.md  pyproject.toml  setup.py  update_itc.sh
.github/workflows/: ci.yml
coretax_reference_master_data/: CoreTax Additional Info Ref.xlsx  CoreTax Barang Jasa Ref.xlsx  CoreTax Facility Stamp Ref.xlsx  CoreTax Transaction Code Ref.xlsx  CoreTax Unit Ref.xlsx
erpnext_indonesia_localisation/: hooks.py  modules.txt
erpnext_indonesia_localisation/change_log/: v0.1.0.md  v1.0.0.md  v1.0.1.md  v1.1.0.md  v1.2.0.md
erpnext_indonesia_localisation/desktop_icon/: indonesia_localisation.json
erpnext_indonesia_localisation/fixtures/: indonesia_localisation_settings.json  role.json
erpnext_indonesia_localisation/tests/: test_coretax_after_install.py  test_coretax_exporter.py  test_coretax_importer.py  test_sales_invoice.py  test_utils.py
erpnext_indonesia_localisation/utils/: constants.py  data.py  install.py  template_tax.py
erpnext_indonesia_localisation/workspace_sidebar/: indonesia_localisation.json
erpnext_indonesia_localization/: __init__.py  hooks.py  modules.txt
erpnext_indonesia_localization/change_log/: v0.1.0.md  v1.0.0.md  v1.0.1.md  v1.1.0.md  v1.2.0.md  v1.3.0.md
erpnext_indonesia_localization/desktop_icon/: indonesia_localization.json
erpnext_indonesia_localization/fixtures/: custom_field.json  indonesia_localization_settings.json  property_setter.json  role.json
erpnext_indonesia_localization/templates/: tax_invoice_bulk.jinja
indonesia_taxes_and_charges/: hooks.py  modules.txt
(+184 files in other folders)
